@@ -27,18 +27,12 @@ dist-hook:
 	rm -f $(top_distdir)/frontends/php/conf/zabbix.conf.php
 
 dbschema:
-	create/schema/gen.pl db2 > create/schema/db2.sql
+	create/schema/gen.pl ibm_db2 > create/schema/ibm_db2.sql
 	create/schema/gen.pl mysql > create/schema/mysql.sql
 	create/schema/gen.pl oracle > create/schema/oracle.sql
 	create/schema/gen.pl postgresql > create/schema/postgresql.sql
 	create/schema/gen.pl sqlite > create/schema/sqlite.sql
 	create/schema/gen.pl c > src/libs/zbxdbhigh/dbschema.c
-	echo -e "\n#ifdef HAVE_MYSQL\nconst char *db_schema= {\"\\" >>src/libs/zbxdbhigh/dbschema.c
-	create/schema/gen.pl mysql|tr -s '\t' ' '|sed -e 's/$$/\\/' >>src/libs/zbxdbhigh/dbschema.c
-	echo -e "\"};\n#elif HAVE_POSTGRESQL\nconst char *db_schema = {\"\\" >>src/libs/zbxdbhigh/dbschema.c
-	create/schema/gen.pl postgresql|tr -s '\t' ' '|sed -e 's/$$/\\/' >>src/libs/zbxdbhigh/dbschema.c
-	echo -e "\"};\n#elif HAVE_ORACLE\nconst char *db_schema = {\"\\" >>src/libs/zbxdbhigh/dbschema.c
-	create/schema/gen.pl oracle|tr -s '\t' ' '|sed -e 's/$$/\\/' >>src/libs/zbxdbhigh/dbschema.c
-	echo -e "\"};\n#elif HAVE_SQLITE3\nconst char *db_schema = {\"\\"  >>src/libs/zbxdbhigh/dbschema.c
+	echo -e "\n#ifdef HAVE_SQLITE3\nconst char *db_schema= {\"\\" >>src/libs/zbxdbhigh/dbschema.c
 	create/schema/gen.pl sqlite|tr -s '\t' ' '|sed -e 's/$$/\\/' >>src/libs/zbxdbhigh/dbschema.c
 	echo -e "\"};\n#endif /* HAVE_SQLITE3 */\n" >>src/libs/zbxdbhigh/dbschema.c
