@@ -1,13 +1,15 @@
 ## Process this file with automake to produce Makefile.in
 
 EXTRA_DIST = \
+	schema/ibm_db2.sql \
 	schema/mysql.sql \
 	schema/oracle.sql \
 	schema/postgresql.sql \
 	schema/sqlite.sql \
 	data/images/*.png \
 	data/data.sql \
+	data/images_ibm_db2.sql \
+	data/images_mysql.sql \
 	data/images_oracle.sql \
 	data/images_pgsql.sql \
-	data/images_mysql.sql \
 	data/images_sqlite3.sql
